[gd_scene load_steps=12 format=3 uid="uid://dytb83n60dm4k"]

[ext_resource type="Script" path="res://meteor.gd" id="1_emrn0"]
[ext_resource type="Texture2D" uid="uid://beyoja62h2yt6" path="res://assets/meteor.png" id="1_vue00"]
[ext_resource type="Texture2D" uid="uid://of6xp32gm0q3" path="res://assets/meteor_broken.png" id="2_ph6fh"]
[ext_resource type="Texture2D" uid="uid://0f5nd507uv85" path="res://assets/meteor_exploding.png" id="3_li66g"]

[sub_resource type="Shader" id="Shader_7582e"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float opacity_loss : hint_range(0.0, 1.0);

void fragment() {
	float alpha = COLOR.a;
	if (alpha > 0.0)
	{
		alpha -= opacity_loss;
		if (alpha < 0.0) 
		{
			alpha = 0.0;
		}
		COLOR.a = alpha;
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_av1i3"]
resource_local_to_scene = true
shader = SubResource("Shader_7582e")
shader_parameter/opacity_loss = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_vv4pb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ph6fh")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_li66g")
}],
"loop": true,
"name": &"exploded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vue00")
}],
"loop": true,
"name": &"full_life",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ko80"]
radius = 42.0119

[sub_resource type="Animation" id="Animation_u1sko"]
resource_name = "die"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/opacity_loss")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 1)
}

[sub_resource type="Animation" id="Animation_wb62g"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/opacity_loss")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_78i3d"]
_data = {
"RESET": SubResource("Animation_wb62g"),
"die": SubResource("Animation_u1sko")
}

[node name="Meteor" type="Area2D"]
script = ExtResource("1_emrn0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_av1i3")
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_vv4pb")
animation = &"exploded"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_5ko80")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_78i3d")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
