[gd_scene load_steps=11 format=3 uid="uid://d35j5wtrou3jb"]

[ext_resource type="Script" path="res://src/entities/meteor.gd" id="1_3yegf"]
[ext_resource type="Texture2D" uid="uid://of6xp32gm0q3" path="res://assets/meteor_broken.png" id="1_uhmwq"]
[ext_resource type="Texture2D" uid="uid://0f5nd507uv85" path="res://assets/meteor_exploding.png" id="2_0v5of"]
[ext_resource type="Texture2D" uid="uid://beyoja62h2yt6" path="res://assets/meteor.png" id="3_uhsc2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3nmvx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uhmwq")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0v5of")
}],
"loop": true,
"name": &"exploded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uhsc2")
}],
"loop": true,
"name": &"full_life",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6gcc"]
radius = 42.0119

[sub_resource type="Animation" id="Animation_dec08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ai3p"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30sue"]
_data = {
"RESET": SubResource("Animation_dec08"),
"die": SubResource("Animation_4ai3p")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hy40u"]
radius = 60.0083

[node name="Meteor" type="CharacterBody2D"]
position = Vector2(169, 118)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_3yegf")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_3nmvx")
animation = &"full_life"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.25, 1.25)
shape = SubResource("CircleShape2D_s6gcc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_30sue")
}

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource("CircleShape2D_hy40u")

[connection signal="area_entered" from="DamageDetector" to="." method="_on_damage_detector_area_entered"]
[connection signal="body_entered" from="DamageDetector" to="." method="_on_damage_detector_body_entered"]
